tests/parse-errors/issue047.zir
let comp main = read [int] >> write [int]
